--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html>
+<head>
+   <meta charset="utf-8">
 
+
+   <title>Department Staff Updates</title>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+       crossorigin="anonymous"></script>
+   <link href="styles.css" rel="stylesheet" type="text/css" />
+</head>
+
+
+<body>
+   <div class="container">
+       <section class="logo">
+           <img style="height: 100px; margin-bottom: 8px;" src="https://www.aoiths.org/logo.svg" alt="Logo Image" />
+       </section>
+       <table class="table table-responsive"></table>
+   </div>
+
+
+   <script src="utils.js"></script>
+   <script src="script.js"></script>
+</body>
+
+
+</html>
